[package]
name = "snes-squish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.1"
divsufsort = "2.0.0"
segment-tree = "2.0.0"

[profile.release]
debug = true
#strip = "symbols"
#opt-level = "s"
# fat lto is slower lol
lto = "thin"
